@@ -206,7 +206,7 @@
     }
 
     .mm-popup__box--ReRoll {
-        width: 500px;
+        width: 550px;
     }
 
 
