@@ -1,3 +1,5 @@
+  -reroll add/remove die from pool
+
 1.2.13
   -reroll samepoll finished
   -modulized Roll.js
